# pg_ai_query

./: .gitignore  .gitmodules  .psqlrc_pg_ai_query  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  example_pg_ai.config  flake.nix  initalize_env_var_logic.sh
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  documentation.md  feature.md  refactor.md
.github/workflows/: ci.yml  claude-review.yml  docs.yml  formatting.yml  release.yml  security.yml
docs/: book.toml
docs/src/: SUMMARY.md  api-reference.md  architecture.md  best-practices.md  config-reference.md  configuration.md  developer-guide.md  examples.md  faq.md  function-reference.md  installation.md  introduction.md  providers.md  quick-start.md  response-formatting.md  schema-discovery.md  troubleshooting.md  usage.md
sql/: pg_ai_query--1.0.sql
src/: config.cpp  pg_ai_query.cpp  prompts.cpp  utils.cpp
src/core/: ai_client_factory.cpp  logger.cpp  provider_selector.cpp  query_generator.cpp  query_parser.cpp  response_formatter.cpp  spi_command_executor.cpp  spi_connection.cpp
src/include/: ai_client_factory.hpp  config.hpp  constants.hpp  gemini_client.h  logger.hpp  prompts.hpp  provider_selector.hpp  query_generator.hpp  query_parser.hpp  response_formatter.hpp  spi_command_executor.hpp  spi_connection.hpp  utils.hpp
src/providers/gemini/: client.cpp
tests/: CMakeLists.txt
tests/fixtures/configs/: custom_prompts.ini  custom_prompts_multiline.ini  default_prompts.ini  long_line_config.ini  prompts_from_files.ini  valid_config.ini
tests/fixtures/prompts/: custom_explain_prompt.txt  custom_system_prompt.txt
tests/unit/: test_ai_client_factory.cpp  test_config.cpp  test_gemini_client.cpp  test_prompts.cpp  test_provider_selector.cpp  test_query_parser.cpp  test_response_formatter.cpp  test_utils.cpp
